--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>容器web应用实验平台</title>
 </head>
 <body>
-here is index.html
+<a href="https://github.com/xsqrenda/flask_mvc_demo"> xsqrenda/flask_mvc_demo </a>
+
 
 </body>
 </html>
