--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <a href="https://github.com/xsqrenda/flask_mvc_demo"> xsqrenda/flask_mvc_demo </a>
+<br/>
+<a href="https://github.com/PacktPublishing/Cloud-Native-Python">Cloud-Native-Python</a>
 
 
 </body>
