--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,7 +8,10 @@
 <a href="https://github.com/xsqrenda/flask_mvc_demo"> xsqrenda/flask_mvc_demo </a>
 <br/>
 <a href="https://github.com/PacktPublishing/Cloud-Native-Python">Cloud-Native-Python</a>
-
-
+<br/>
+测试
+{% for i in price %}
+{{ i}}
+{% endfor %}
 </body>
 </html>
